--- a/package.json
+++ b/package.json
@@ -3,6 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@syncfusion/ej2": "^21.1.37",
+    "@syncfusion/ej2-react-calendars": "^21.1.37",
+    "@syncfusion/ej2-react-charts": "^21.1.37",
+    "@syncfusion/ej2-react-dropdowns": "^21.1.37",
+    "@syncfusion/ej2-react-grids": "^21.1.37",
+    "@syncfusion/ej2-react-inputs": "^21.1.37",
+    "@syncfusion/ej2-react-kanban": "^21.1.37",
+    "@syncfusion/ej2-react-popups": "^21.1.37",
+    "@syncfusion/ej2-react-richtexteditor": "^21.1.37",
+    "@syncfusion/ej2-react-schedule": "^21.1.37",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +22,9 @@
     "@types/react-dom": "^18.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -39,5 +52,21 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-modal": "^3.13.1",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.37.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "firebase": "^9.19.1",
+    "moment": "^2.29.4",
+    "node-sass": "^7.0.3",
+    "postcss": "^8.4.21",
+    "react-datepicker": "^4.11.0",
+    "tailwindcss": "^3.3.1"
   }
 }
