--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "@syncfusion/ej2": "^21.1.37",
     "@syncfusion/ej2-react-calendars": "^21.1.37",
     "@syncfusion/ej2-react-charts": "^21.1.37",
@@ -24,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-modal": "^3.16.1",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
