--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "node-sass": "^7.0.3",
     "postcss": "^8.4.21",
     "react-datepicker": "^4.11.0",
+    "react-toastify": "^9.1.2",
     "tailwindcss": "^3.3.1"
   }
 }
