--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "@types/node": "^16.18.23",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
+    "chart.js": "^4.2.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
@@ -56,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@types/react-modal": "^3.13.1",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.37.0",
@@ -69,7 +71,9 @@
     "node-sass": "^7.0.3",
     "postcss": "^8.4.21",
     "react-datepicker": "^4.11.0",
+    "react-modal": "^3.16.1",
     "react-toastify": "^9.1.2",
+    "recharts": "^2.5.0",
     "tailwindcss": "^3.3.1"
   }
 }
