--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "@syncfusion/ej2": "^21.1.37",
     "@syncfusion/ej2-react-calendars": "^21.1.37",
     "@syncfusion/ej2-react-charts": "^21.1.37",
-    "@syncfusion/ej2-react-dropdowns": "^21.1.37",
     "@syncfusion/ej2-react-grids": "^21.1.37",
     "@syncfusion/ej2-react-inputs": "^21.1.37",
-    "@syncfusion/ej2-react-kanban": "^21.1.37",
     "@syncfusion/ej2-react-popups": "^21.1.37",
     "@syncfusion/ej2-react-richtexteditor": "^21.1.37",
     "@syncfusion/ej2-react-schedule": "^21.1.37",
@@ -57,7 +55,6 @@
     ]
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.6.0",
     "@types/react-modal": "^3.13.1",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.37.0",
@@ -70,7 +67,7 @@
     "moment": "^2.29.4",
     "node-sass": "^7.0.3",
     "postcss": "^8.4.21",
-    "react-datepicker": "^4.11.0",
+    "react-data-table-component": "^7.5.3",
     "react-modal": "^3.16.1",
     "react-toastify": "^9.1.2",
     "recharts": "^2.5.0",
