--- a/package.json
+++ b/package.json
@@ -3,15 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.3",
     "@reduxjs/toolkit": "^1.9.3",
-    "@syncfusion/ej2": "^21.1.37",
-    "@syncfusion/ej2-react-calendars": "^21.1.37",
-    "@syncfusion/ej2-react-charts": "^21.1.37",
-    "@syncfusion/ej2-react-grids": "^21.1.37",
-    "@syncfusion/ej2-react-inputs": "^21.1.37",
-    "@syncfusion/ej2-react-popups": "^21.1.37",
-    "@syncfusion/ej2-react-richtexteditor": "^21.1.37",
-    "@syncfusion/ej2-react-schedule": "^21.1.37",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -22,6 +18,7 @@
     "chart.js": "^4.2.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^4.12.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
@@ -55,9 +52,9 @@
     ]
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.11.2",
     "@types/react-modal": "^3.13.1",
     "autoprefixer": "^10.4.14",
-    "classnames": "^2.3.2",
     "eslint": "^8.37.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.27.5",
